<resources>
    <string name="app_name">Glucometer</string>
    <string name="version">Alpha version</string>
    <string name="welcome1">Glucometer</string>
    <string name="desc1">Welcome to Glucometer, the best way to check your Glucose blood</string>
    <string name="welcome2">Gadget Mode On</string>
    <string name="desc2">Check your Glucose blood from your gadget simultaneously</string>
    <string name="welcome3">Check everyday</string>
    <string name="desc3">Within Glucometer, everyday means getting easier</string>
    <string name="welcome4">Record to database</string>
    <string name="desc4">Don\'t worry about record. Glucometer creates it anywhere.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="attention_signup">Create your Glucometer account</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="bloodtype">Blood Type</string>
    <string-array name="blood_type">
        <item>A+</item>
        <item>B+</item>
        <item>O+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O-</item>
        <item>AB-</item>
        <item>Don\'t know</item>
    </string-array>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="pie">Person-in-emergency</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Register</string>
    <string name="guest">Login as a guest</string>
    <string name="create_account">Create Account</string>
    <string name="already_signup">Already Sign up?</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--navigation-->
    <string name="nav_glucometer">Glucometer</string>
    <string-array name="next_app">
        <item name="nav_app2">App 2</item>
        <item name="nav_app3">App 3</item>
    </string-array>
    <string name="nav_app2">App 2</string>
    <string name="nav_app3">App 3</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Sign out</string>
    <string name="title_user">User</string>
    <string name="title_glucometer">Your Glucose</string>
    <string name="title_statistics">Stats</string>
    <string name="title_about">About</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
