<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_user"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_glucometer"
        android:icon="@drawable/ic_glucometer_black_24dp"
        android:title="@string/title_glucometer" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics_black_24dp"
        android:title="@string/title_statistics"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_about_black_24dp"
        android:title="@string/title_about"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/nav_logout"
        app:showAsAction="never" />

</menu>
