<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_glucometer_24"
            android:title="@string/nav_glucometer" />
        <item android:title="Next Applications">
            <menu>
                <item
                    android:id="@+id/nav_app2"
                    android:icon="@drawable/ic_app2_24"
                    android:title="@string/nav_app2" />
                <item
                    android:id="@+id/nav_app3"
                    android:icon="@drawable/ic_app3_24"
                    android:title="@string/nav_app3" />
            </menu>
        </item>
    </group>
    <item android:title="Preferences">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_24"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>