<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_transaction"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_background_splash"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <ImageView
            android:src="@drawable/img_logo_splash"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attention_signup"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"/>
        <!--Username-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--Password-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--Confirm Password-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm"
                android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--Fullname-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/fullname"
                android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--Weight-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/weight"
                android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--Height-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/height"
                android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--Person-in-emergency-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_pie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/pie"
                android:textColor="@android:color/white"/>
        </android.support.design.widget.TextInputLayout>
        <!--Create account button-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_create_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/create_account"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white">
        </android.support.v7.widget.AppCompatButton>
        <!--Back to Sign in menu-->
        <TextView
            android:id="@+id/link_already"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_signup"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/white">
        </TextView>
    </LinearLayout>
</ScrollView>
