<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/img_background_splash"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <!--Logo-->
        <ImageView
            android:id="@+id/img_logo"
            android:src="@drawable/img_logo_splash"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"/>
        <!--Username-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:textColor="#FFFFFF"/>
        </android.support.design.widget.TextInputLayout>
        <!--Password-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textColor="#FFFFFF"/>
        </android.support.design.widget.TextInputLayout>
        <!--Sign in button-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_in"
            android:background="@color/colorPrimary"
            android:onClick="loginButton"
            android:textColor="#FFFFFF">
        </android.support.v7.widget.AppCompatButton>
        <!--Request to Sign up-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            android:background="@color/colorPrimary"
            android:onClick="registerButton"
            android:textColor="#FFFFFF">
        </android.support.v7.widget.AppCompatButton>
        <!--Sign in as guest-->
        <TextView
            android:id="@+id/link_guest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/guest"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FFFFFF">
        </TextView>
    </LinearLayout>
</ScrollView>
